resource path changed and give with respect to binary

--- a/qt project/soduku-solver/mainwindow.ui
+++ b/qt project/soduku-solver/mainwindow.ui
@@ -91,6 +91,9 @@
       <height>61</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">image: url(:/new/prefix1/brain.png);</string>
+    </property>
     <property name="text">
      <string>TextLabel</string>
     </property>
