--- a/qt project/soduku-solver/alertdialog.ui
+++ b/qt project/soduku-solver/alertdialog.ui
@@ -43,7 +43,7 @@
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">image: url(:/new/prefix1/error.png);</string>
+    <string notr="true"/>
    </property>
    <property name="text">
     <string/>
