--- a/qt project/soduku-solver/alertdialog.ui
+++ b/qt project/soduku-solver/alertdialog.ui
@@ -10,6 +10,18 @@
     <height>108</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>603</width>
+    <height>108</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>603</width>
+    <height>108</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Soduku Solver - Alert</string>
   </property>
@@ -43,7 +55,7 @@
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true"/>
+    <string notr="true">image: url(:/new/prefix1/error.png);</string>
    </property>
    <property name="text">
     <string/>
