--- a/qt project/soduku-solver/helpmainwindow.ui
+++ b/qt project/soduku-solver/helpmainwindow.ui
@@ -10,6 +10,18 @@
     <height>372</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>446</width>
+    <height>372</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>446</width>
+    <height>372</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Soduku Solver - Help</string>
   </property>
@@ -143,7 +155,7 @@
      <x>0</x>
      <y>0</y>
      <width>446</width>
-     <height>19</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
