--- a/qt project/soduku-solver/mainwindow.ui
+++ b/qt project/soduku-solver/mainwindow.ui
@@ -10,6 +10,24 @@
     <height>375</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>462</width>
+    <height>375</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>462</width>
+    <height>375</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Soduku Solver</string>
   </property>
@@ -49,13 +67,13 @@
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>331</width>
+       <width>291</width>
        <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>Purisa</family>
+       <family>Segoe Print</family>
        <pointsize>25</pointsize>
        <weight>75</weight>
        <bold>true</bold>
@@ -86,16 +104,13 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>30</y>
+      <y>40</y>
       <width>81</width>
-      <height>71</height>
+      <height>61</height>
      </rect>
     </property>
-    <property name="styleSheet">
-     <string notr="true">image: url(:/new/prefix1/brain.png);</string>
-    </property>
     <property name="text">
-     <string/>
+     <string>TextLabel</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton">
@@ -155,16 +170,6 @@
      <string>Help</string>
     </property>
    </widget>
-  </widget>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>462</width>
-     <height>19</height>
-    </rect>
-   </property>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
