--- a/qt project/soduku-solver/resource.qrc
+++ b/qt project/soduku-solver/resource.qrc
@@ -1,1 +1,8 @@
-<RCC/>
+<RCC>
+    <qresource prefix="/new/prefix1">
+        <file>brain.png</file>
+        <file>error.png</file>
+        <file>success.png</file>
+        <file>info.png</file>
+    </qresource>
+</RCC>
